--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ h1,h2,h3,h4,h5,h6{
     /*change height to adjust main photo block*/
     height: 700px;
     /*Use scale-down to make photo not fill in the space all the way*/
-    object-fit: cover;
+    object-fit: scale-down;
 
 }
 
@@ -354,7 +354,7 @@ footer {
 
 .mobile-navigation ul {
     position: fixed;
-    left: -400px;
+    left: -1000px;
     transition: left 0.3s linear;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.7);
@@ -388,20 +388,44 @@ footer {
     color: white;
 }
 
+@media screen and (max-width: 700px) {
+    .main-row .text-container,
+    .main-row .image-container {
+        width: 100%;
+    }
+    .main-row:nth-of-type(2) {
+        flex-wrap: wrap-reverse;
+    }
+    .login-container {
+        height: 90vh;
+    }
+    .right-login-container {
+        flex: 1;
+        border: 1px solid;
+    }
+    .right-login-container input {
+        width: 100%;
+    }
+    .left-login-container {
+        display: none;
+    }
+} 
+   
+
 @media screen and (max-width: 400px) {
     .navigation {
-      display: none;  
-    }
-    h1 {
-        font-size: 2.9rem;
+        display: none;  
     }
     .mobile-navigation {
         display: block;
     }
+    h1 {
+        font-size: 2.9rem;
+    }
     .outer-navigation {
         padding-top: 0;
     }
-    .our-mission{
+    .our-mission {
         padding: 30px;
     }
     .main-row .text-container {
