--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ h1,h2,h3,h4,h5,h6{
 
 }
 
-/*form*/
+/*Contact Form*/
 
 .contact-form {
     padding: 30px;
@@ -318,7 +318,7 @@ footer {
     width: 280px;
     text-align: center;
     padding-bottom: 10px;
-    margin: 20px;
+    margin: 25px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
 }
@@ -332,6 +332,65 @@ footer {
     height: 250px;
     object-fit: cover;
 }
+
+/*Instagram Reel*/
+
+.insta {
+    /*
+    content: "";
+    clear: both;
+    max-width: 3000px;*/
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    background-color: pink;
+    /*
+    background-image: url(https://images.unsplash.com/photo-1586809764311-090bc6068916?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+    */
+}
+.instagram-media {
+    /*
+
+    float: left;
+    background:#FFF; 
+    border:0; 
+    border-radius:3px; 
+    box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
+    margin: 0 auto; 
+    max-width:540px; 
+    min-width:326px; 
+    padding: 10px; 
+    object-fit: cover;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    */
+    float: left;
+    margin: 0 auto;   
+}
+
+.insta-post {
+    width: 400px;
+    text-align: center;
+    padding-bottom: 0px;
+    margin: 20px;
+
+    transition: 0.3s;
+}
+
+.insta-post:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.insta-header {
+    padding: 30px;
+    background-color: pink;
+    text-align: center;
+}
+
+
 
 /* Mobile Navigation */
 
