--- a/style.css
+++ b/style.css
@@ -391,16 +391,18 @@ footer {
 }
 */
 
-
+/*
 .snaps-inline {
     scroll-snap-type: inline mandatory;
-    scroll-padding: var(--spacer);
+    scroll-padding: 80px;
 }
 
 .snaps-inline > * {
+    
+  
     scroll-snap-align: start;
 }
-/*
+
 .insta-post {
     display: flex;
     padding: 30px;
@@ -449,21 +451,18 @@ footer {
 .test-img-container blockquote {
     height: 281px;
     width: 500px;
-    scroll-snap-align: start;
     
+    
+}
+
+.instagram-media {
+    scroll-snap-align: center;
 }
 
 /*Social Media Icons*/
 
 
-.fa-brands {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-  }
+
   
 .fa-brands:hover {
     opacity: 0.7;
@@ -472,20 +471,46 @@ footer {
 .fa-facebook{
     background: #3B5998;
     color: white;
-}
-
-.fa-youtube{
-    background: #bb0000;
-    color: white;
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    border-radius: 50%;
+    text-decoration: none;
+    margin: 5px 2px;
 }
 
 .fa-instagram{
-    background: #125688;
+    /* background: #bb0000; */
+    background: linear-gradient(to bottom left, RGB(60, 4, 249),RGB(135, 0, 126), RGB(243, 148, 48), RGB(243, 230, 10));
     color: white;
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    border-radius: 50%;
+    text-decoration: none;
+    margin: 5px 2px;
+}
+
+.fa-youtube{
+    background: #cb2027;
+    color: white;
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    border-radius: 50%;
+    text-decoration: none;
+    margin: 5px 2px;
+
 }
 .fa-pinterest {
     background: #cb2027;
     color: white;
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    border-radius: 50%;
+    text-decoration: none;
+    margin: 5px 2px;
 }
 
 /*test-icon testing*/
@@ -590,7 +615,7 @@ footer {
 } 
    
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
     .navigation {
         display: none;  
     }
@@ -608,5 +633,10 @@ footer {
     }
     .main-row .text-container {
         padding: 10px;
+    }
+    .fa-facebook, .fa-instagram, .fa-pinterest, .fa-youtube {
+    padding: 10px;
+    font-size: 15px;
+    width: 15px;
     }
 }
