--- a/style.css
+++ b/style.css
@@ -99,11 +99,14 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .main-title-container button {
-    background-color: #867409;
+    background-color: #palevioletred;
     color: white;
     border: none;
     font-size: 2rem;
     padding: 10px 20px;
+}
+.main-title-container button:hover{
+    color: lavender;
 }
 
 /* mopves arrow to bottom and animates it */
