--- a/style.css
+++ b/style.css
@@ -99,17 +99,19 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .main-title-container button {
-    background-color: #palevioletred;
+    background-color: palevioletred;
     color: white;
     border: none;
+    border-radius: 15px;
     font-size: 2rem;
     padding: 10px 20px;
 }
+
 .main-title-container button:hover{
     color: lavender;
 }
 
-/* mopves arrow to bottom and animates it */
+/* moves arrow to bottom and animates it */
 @keyframes MoveUpDown {
     0%,
     100% {
@@ -120,10 +122,10 @@ h1,h2,h3,h4,h5,h6{
 }
 }
 
-.arrow-down-navigation {
+.arrow-down-navigation::before {
     animation: MoveUpDown 2.5s ease-in-out infinite;
     color: white;
-    font-size: 2rem;
+    font-size: 70px;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
@@ -157,6 +159,14 @@ h1,h2,h3,h4,h5,h6{
     object-fit: scale-down;
 
 }
+<!--
+.calendar {
+
+align-items: center;
+padding-left: 500px;
+
+
+}-->
 
 .main-row .text-container {
     width: 50%;
@@ -215,7 +225,7 @@ h1,h2,h3,h4,h5,h6{
 
 .contact-form {
     padding: 30px;
-    background-color: lightblue;
+    background-color: white;
     text-align: center;
 }
 
